# accelera

./: .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: actions.yml  auto-assignment.yml  ci.yaml
accelera/: __init__.py
accelera/api/: __init__.py
accelera/api/accelera_automl/: __init__.py
accelera/api/accelera_automl/automlbenchmark_custom_myautoml/: __init__.py
accelera/api/accelera_automl/benchmark_results/: __init__.py
accelera/api/accelera_automl/components/: __init__.py
accelera/api/accelera_automl/core/: __init__.py
accelera/api/accelera_automl/meta_learning/: __init__.py
accelera/api/accelera_automl/meta_learning_data/: __init__.py
accelera/api/accelera_automl/optimization/: __init__.py
accelera/api/accelera_pipe/core/: __init__.py
accelera/api/accelera_pipe/wrappers/: __init__.py
accelera/api/auto_preprocessing/: __init__.py
accelera/api/auto_preprocessing/core/: __init__.py
accelera/api/auto_preprocessing/wrappers/: __init__.py
accelera/api/custom/: __init__.py
accelera/api/deployment/: __init__.py
accelera/api/deployment/tests/: __init__.py
accelera/api/e2e/: __init__.py
accelera/api/e2e/tabular/: __init__.py
accelera/api/e2e/text/: __init__.py
accelera/api/parallelizer/: __init__.py
accelera/api/utils/: __init__.py
accelera/bindings/: graph.cpp
accelera/src/: config.py
accelera/src/accelera_automl/: Project Code.xlsx  __init__.py  base.py  base_evaluation.py  classification.py  classification_test.py  configspace_search_space.py  evaluation.py  regression.py  regression_test.py  stacked_ensemble.py  stacked_ensemble_regression.py  stacked_ensemble_regression_test.py  stacked_ensemble_test.py  utils.py
accelera/src/accelera_automl/automlbenchmark_custom_myautoml/: config.yaml  constraints.yaml  frameworks.yaml  run_automlbenchmark_classification_framework.sh  run_automlbenchmark_classification_frameworks.sh  run_pmlb_regression_framework.sh
accelera/src/accelera_automl/components/: __init__.py  classification.py  regression.py  regression_test.py
accelera/src/accelera_automl/core/: automl.py
accelera/src/accelera_automl/meta_learning/: __init__.py  meta_learning_warmstart_test.py  metafeatures.py  warmstart.py
accelera/src/accelera_automl/optimization/: __init__.py  smac_optimizer.py  smac_optimizer_test.py
accelera/src/accelera_pipe/core/: executed_graph.py  pipeline.py  pipeline_base.py  pipeline_test.py
accelera/src/auto_preprocessing/core/: classical_testing_preprocessing.py  (+19 more)
accelera/src/custom/: custom_test.py  transformer.py
accelera/src/deployment/: deployment.py  gui.py  modelservice.py  schema_validation.py  server.py  tracking.py  vcs.py
accelera/src/e2e/: e2e.py  e2e_test.py
accelera/src/parallelizer/: cpp_compiler.py  parallelizer.py  parallelizer_test.py  py2cpp_converter.py  py2cpp_converter_test.py
accelera/src/utils/: accelera_utils.py  dataset_retriever.py  preprocessing.py  source_backed_function.py  source_backed_function_test.py
accelera_automl_benchmark_results/raw_results_regression/regression/: flaml.csv
accelera_automl_benchmark_results/result_summary/classification/: classfication_datasets_summary.csv
automl/: index.html
benchmark/: index.html
benchmark/backend/: package-lock.json  package.json  server.js
benchmark/backend/config/: create_db.js  get_json.js
benchmark/backend/middleware/: admin.js  auth.js
benchmark/backend/routes/: benchmark.js  metrics.js  submissions.js  user.js
benchmark/backend/schemas/: benchmark.js  user.js
benchmark/backend/scripts/: get_score.py  validate_user_links.py
benchmark/backend/validations/: benchmark.js
benchmark/frontend/src/: App.jsx  auth.js  index.css
code-parallelizer/: index.html
contributing/: index.html
core-pipeline/: index.html
current-generator-report/: index.html
data/: hard_parallelizer_eval_results_generated.json  parallelizer_eval_results.json
data/accelera_automl/: automl_regression_results.csv  run_local_data_results.csv
data/accelera_automl/titanic_preprocessing/: X_train_processed.csv  X_val_processed.csv  y_train_processed.csv  y_val_processed.csv
data/hard_parallelized_files/: parallelized_hard_eval_000.cpp  parallelized_hard_eval_001.cpp  parallelized_hard_eval_002.c
data/hard_test_files/: hard_eval_000.cpp  hard_eval_001.cpp  hard_eval_002.py
deployment/: index.html
docs/: automl.md  benchmark.md  code-parallelizer.md  core-pipeline.md  current-generator-report.md  deployment.md  examples.md  index.md
docs/latex/: Makefile  gp_book.tex
docs/latex/dots/: deployment_commit.dot  deployment_deploy.dot  deployment_module.dot  deployment_targets.dot
docs/latex/individual work/: accelera_automl.tex  accpipe_para.tex
docs/latex/sections/: methodology-deployment.tex  methodology-nesma.tex  results-deployment.tex  results-modhamed.tex
examples/: Makefile  accelera_e2e.py  accpipe_demo.py  auto_preprocessing_compare.py  auto_preprocessing_demo.py  auto_preprocessing_image_classification.py  auto_preprocessing_text.py  code_parallelizer_demo.py  deployment_demo.py  duplicate_nodes.py  index.html  loop_example.py  model.py  parallel_accpipe.py  presentation_demo_1.py  run_benchmark_servers.py  run_classification_task_automl.py  run_regression_task_automl.py  save_load.py
installation/: index.html
latex/: gp_book.lol
latex/dots/: parallelizer_workflow.dot
latex/imgs/: parallelizer_accelera_pipe_flow.tex  parallelizer_module_workflow.tex
latex/individual work/: Makefile  mazen_gpbook.tex  nesma_gpbook.tex
latex/sections/: methdoloy-mohamed.tex  results-nesma.tex
models/open_mp_classifier/: Dockerfile  README.md  app.py  m1.ipynb  requirements.txt
search/: search_index.json
shell/: install_llvm.sh
src/core/: graph.cpp  node.cpp
src/nodes/: input.cpp  model.cpp  predict.cpp  preprocess.cpp
src/utils/: graph_utils.cpp
tools/: clean_ram.py  evaluate_hard_parallelizer.py  generate_init.py
website/: index.html  script.js  styles.css
(+103 files in other folders)
